fixed up spacing and logos

--- a/app/assets/stylesheets/api/gyms.scss
+++ b/app/assets/stylesheets/api/gyms.scss
@@ -73,3 +73,20 @@ $blue4: #091065;
 
   }
 }
+
+.gym-show {
+  h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    *{
+      padding: 10px;
+    }
+    .gym-logo {
+      width: 50px;
+      height: 50px;
+    }
+
+  }
+}
