--- a/app/assets/stylesheets/api/workouts.scss
+++ b/app/assets/stylesheets/api/workouts.scss
@@ -69,6 +69,7 @@ thead tr {
   display: block;
   text-align: center;
   font-size: 24px;
+  padding: 10px;
 }
 
 
